--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
+:root {
+  --main-blue: #146eb4;
+  --white: #ffffff;
+}
+@font-face {
+  font-family: "galano-semibold";
+  src: url("./font/galanogrotesque-semibold.otf");
+}
+@font-face {
+  font-family: "galano-regular";
+  src: url("./font/galanogrotesque-regular.otf");
+}
+@font-face {
+  font-family: "galano-medium";
+  src: url("./font/galanogrotesque-medium.otf");
+}
+
+* {
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
