--- a/src/components/freeslogan/FreeSlogan.css
+++ b/src/components/freeslogan/FreeSlogan.css
@@ -99,9 +99,18 @@
 }
 
 @media only screen and (max-width: 815px) {
+  .freeSlogans {
+    padding: 0 5%;
+  }
   .slogans_top {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+  }
+  .freeslogan_container_subtitle {
+    font-size: 14px;
+  }
+  .freeslogan_container_title {
+    font-size: 16px;
   }
 }
