--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -42,8 +42,8 @@
 .footer_top_right div span {
   background-color: white;
   color: black;
-  border-radius: 20px;
-  width: 20px;
+  border-radius: 100%;
+  padding: 2px 6px;
   text-align: center;
   font-size: 14px;
   font-weight: 600;
@@ -73,12 +73,12 @@
     flex-direction: column;
   }
   .footer {
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
   }
   .footer_top_right {
     display: grid;
-    gap: 10px 5px;
+    gap: 10px 3px;
     width: 100%;
     margin-top: 20px;
   }
@@ -91,5 +91,10 @@
   .footer_bottom p,
   .footer_bottom p span {
     font-size: 13px;
+  }
+  .footer_top_right div span {
+    border-radius: 100%;
+    padding: 1px 3px;
+    font-size: 10px;
   }
 }
