Fix: css issues for mobile view on freeslogans component

--- a/src/components/freeslogan/FreeSlogan.css
+++ b/src/components/freeslogan/FreeSlogan.css
@@ -109,6 +109,7 @@
   }
   .freeslogan_container_subtitle {
     font-size: 14px;
+    width: 100%;
   }
   .freeslogan_container_title {
     font-size: 16px;
